# Simple_CMake_Project

./: .gitignore  CMakeLists.txt  README.md  main.c  run
include/: linkedList.c  main.h  wrapper.c  wrapper.h
lib/linkedList/: linkedList.h
source/: CMakeLists.txt  client.c  main.c  main.h  server.c  test.c
test/: CMakeLists.txt  test.c
